# championify_tauri_rs

./: package-lock.json  package.json  vite.config.js
src/: convert-ejs.js  index.ejs  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: itemset_struct.rs  main.rs
src/components/Modals/: delete_notification.ejs
src/components/UI/: divider.ejs  loader.ejs  progress_bar.ejs
src/components/partials/: footer.ejs  head.ejs  header.ejs  locale_selector.ejs
src/locales/ar/: common.json  errors.json  ui.json
src/locales/bg/: common.json  errors.json  ui.json
src/locales/bs/: common.json  errors.json  ui.json
src/locales/ca/: common.json  errors.json  ui.json
src/locales/cs/: common.json  errors.json  ui.json
src/locales/da/: common.json  errors.json  ui.json
src/locales/de/: common.json  errors.json  ui.json
src/locales/el/: common.json  errors.json  ui.json
src/locales/en/: common.json  errors.json  ui.json
src/locales/es/: common.json  errors.json  ui.json
src/locales/fi/: common.json  errors.json  ui.json
src/locales/fr/: common.json  errors.json  ui.json
src/locales/he/: common.json  errors.json  ui.json
src/locales/hi/: common.json  errors.json  ui.json
src/pages/: complete.ejs  error.ejs  main.ejs  manual_update.ejs  update.ejs
src/scrapers/: baseScraper.js  index.js  koreanbuilds.js  leagueofgraphs.js  mobalytics.js  opgg.js  probuilds.js  scraperManager.js  ugg.js
src/styles/: breaking_changes.scss  complete.scss  error.scss  index.scss  main.scss  osx_buttons.scss  update.scss  win_buttons.scss
(+75 files in other folders)
